--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "private": false,
     "scripts": {
-        "start": "node server.js"
+        "start": "node server/server.js"
     },
     "dependencies": {
         "express": "3.2.6",
