added cache directory to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 # Node modules installed when using package.json and executing the command 'npm install'#
 #########################################################################################
 node_modules
+
+# The cache files #
+###################
+cache
