--- a/citizennet/config/database.yml
+++ b/citizennet/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: citizennet_development
   pool: 5
-  username: citizennet
+  username: shawnbroukhim
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,7 +48,7 @@ test:
   encoding: unicode
   database: citizennet_test
   pool: 5
-  username: citizennet
+  username: shawnbroukhim
   password:
 
 production:
@@ -56,5 +56,5 @@ production:
   encoding: unicode
   database: citizennet_production
   pool: 5
-  username: citizennet
+  username: shawnbroukhim
   password:
