--- a/code_challenge/Gemfile
+++ b/code_challenge/Gemfile
@@ -27,9 +27,23 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
+gem 'redis-rails'
+
+gem 'httparty'
+gem 'twitter-bootstrap-rails', :git => 'git://github.com/seyhunak/twitter-bootstrap-rails.git'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
+end
+
+group :development, :test do 
+  gem 'rspec-rails'
+  gem 'capybara'
+  gem 'launchy'
+  gem 'pry-rails'
+  gem 'shoulda-matchers'
+  gem 'jasmine'
 end
 
 # Use ActiveModel has_secure_password
