--- a/code_challenge/Gemfile
+++ b/code_challenge/Gemfile
@@ -45,6 +45,8 @@ group :development, :test do
   gem 'pry-rails'
   gem 'shoulda-matchers'
   gem 'jasmine'
+  gem 'simplecov'
+  gem 'capybara-webkit'
 end
 
 # Use ActiveModel has_secure_password
